--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.10",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
@@ -23,12 +25,13 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.11.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^4.1.O"
+    "vite": "^4.1.1"
   }
 }
